# geovar

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
docs/: .buildinfo  cite.html  genindex.html  geovar.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/geovar/: binning.html  geovar.html  utils.html  viz.html
docs/_sources/: cite.rst.txt  geovar.rst.txt  index.rst.txt  install.rst.txt
docs/_sources/notebooks/: getting-started.ipynb.txt  simulated-data.ipynb.txt
docs/_sources/stubs/: geovar.GeoVar.rst.txt  geovar.GeoVarPlot.rst.txt  geovar.binning.GeoVar.rst.txt  geovar.geovar.GeoVar.rst.txt  geovar.utils.rst.txt  geovar.viz.GeoVarPlot.rst.txt
docs/_static/: sphinxdoc.css
docs/notebooks/: getting-started.html  getting-started.ipynb  simulated-data.html  simulated-data.ipynb
docs/stubs/: geovar.GeoVar.html  geovar.GeoVarPlot.html  geovar.binning.GeoVar.html  geovar.geovar.GeoVar.html  geovar.utils.html  geovar.viz.GeoVarPlot.html
docsrc/: cite.rst  conf.py  geovar.rst  index.rst  install.rst
docsrc/_build/doctrees/: cite.doctree  environment.pickle  geovar.doctree  index.doctree  install.doctree
docsrc/_build/html/: .buildinfo  cite.html  (+7 more)
docsrc/notebooks/: getting-started.ipynb  simulated-data.ipynb
docsrc/stubs/: geovar.GeoVar.rst  geovar.GeoVarPlot.rst  geovar.binning.GeoVar.rst  geovar.geovar.GeoVar.rst  geovar.utils.rst  geovar.viz.GeoVarPlot.rst
geovar/: __init__.py  binning.py  geovar.py  utils.py  viz.py
geovar/data/: integrated_call_samples_v3.20130502.1kg_pops.indiv_label  integrated_call_samples_v3.20130502.1kg_superpops.panel  new_1kg_nygc.chr22.biallelic_snps.filt.n5000.freq.txt  new_1kg_nygc.chr22.biallelic_snps.filt.n5000.vcf.gz.tbi
tests/: test_binning.py  test_io.py  test_utils.py
(+22 files in other folders)
