[metadata]
name = geovar
version = 1.0.0
author = Arjun Biddanda
description = A library to generate plots of joint allele frequency variation
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/aabiddanda/geovar
project_urls =
    Bug Tracker = https://github.com/aabiddanda/geovar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3.0 License
    Operating System :: OS Independent
license_file = LICENSE.md

[options]
packages = find_namespace:
#include_package_data = True
python_requires = >= 3.6
install_requires =
	matplotlib >= 3.0
	numpy >= 1.17.0
	pandas >= 1.0.0
	cyvcf2 >= 0.30.0
	tqdm >= 4.0.0

[options.package_data]
geovar.data =
  *.vcf
  *.vcf.gz
  *.panel
  *.txt.gz
  *.txt

[options.extras_require]
dev = pytest; flake8
pypi = build; twine

[flake8]
max-line-length = 110
